--- a/frontend/src/assets/css/landing.css
+++ b/frontend/src/assets/css/landing.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Bungee+Shade&family=Cinzel:wght@400..900&display=swap');
-/* #7616aa */
-/* #ffbd59 */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 html, body {
     background-color: black;
@@ -15,6 +14,7 @@ html, body {
     font-family: "Bungee Shade", sans-serif;
     font-optical-sizing: auto;
 }
+
 .main-page > .header header:first-child {
     color: #ffbd59;
 }
@@ -24,3 +24,86 @@ html, body {
     position: relative;
     top: -30px;
 }
+
+.input-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-left: 30%;
+}
+
+.youtube-input-field {
+    margin: 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    font-size: 18px;
+    color: #fff ;
+    background-color: #7616aa;
+    width: 60%;
+    text-align: center;
+}
+
+.youtube-input-field::placeholder {
+    color: #fff;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.mp4-input-field {
+    margin: 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    font-size: 18px;
+    color: white;
+    background-color: #7616aa;
+    cursor: pointer;
+    width: 15%;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.mp4-input-hidden {
+    display: none;
+}
+
+.image-buttons {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.image-button {
+    margin: 10px;
+    width: 289px;
+    height: 200px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.image-button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    margin-left: 30.5%;
+}
+
+.loader {
+    border: 16px solid #f3f3f3; 
+    border-top: 16px solid #3498db; 
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    margin: 0 auto;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
